<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/conn_dest">
		<EditTextPreference android:key="host"
			android:title="@string/host" android:summary="@string/host_summary"
			android:inputType="text" />
		<EditTextPreference android:key="port"
			android:title="@string/port" android:summary="@string/port_summary"
			android:inputType="numberDecimal" android:defaultValue="22" />
		<EditTextPreference android:key="username"
			android:title="@string/username"
			android:summary="@string/username_summary"
			android:inputType="text" />
		<!-- XXX: key misnomer -->
		<EditTextPreference android:key="mountpoint"
			android:title="@string/remote_path"
			android:summary="@string/remote_path_summary"
			android:inputType="text" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/auth">
		<EditTextPreference android:key="passwd"
			android:title="@string/passwd"
			android:summary="@string/passwd_summary"
			android:inputType="textPassword" />
	</PreferenceCategory>
	<Preference android:key="test_connection"
		android:title="Test connection"
		android:summary="Attempt a connection" />
	<Preference android:key="launch"
		android:title="Start file manager"
		android:summary="View the files via system built-in file manager" />
</PreferenceScreen>
